--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,5 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,flask,venv
+# Start of my manual gitignore
+gphoto_oauth.json
